<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:padding="8dp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reference"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/ref"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="100dp"></TextView>

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"></LinearLayout>
                <LinearLayout
                    android:id="@+id/lsModules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/lModules"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"></TextView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"></LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/average"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="80dp"
                        android:textAlignment="textEnd"></TextView>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>